<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_dsp_title">
    <CheckBoxPreference
        android:key="dsp.masterswitch.enable"
        android:summaryOn="@string/pref_dsp_summary_on"
        android:summaryOff="@string/pref_dsp_summary_off"
        android:disableDependentsState="false"
        android:title="@string/pref_dsp_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.masterswitch.clipmode"
        android:defaultValue="0"
        android:dialogTitle="@string/pref_clip_title"
        android:entries="@array/clip_mode"
        android:entryValues="@array/clip_mode_values"
        android:title="@string/pref_clip_title" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.masterswitch.finalgain"
        android:defaultValue="100"
        android:dialogTitle="@string/dialog_gain"
        android:entries="@array/clip_gain"
        android:entryValues="@array/clip_gain_values"
        android:title="@string/dialog_gain" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_compression_title">
    <CheckBoxPreference
        android:key="dsp.compression.enable"
        android:summaryOn="@string/pref_compression_summary_on"
        android:summaryOff="@string/pref_compression_summary_off"
        android:disableDependentsState="false"
        android:title="@string/pref_compression_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.pregain"
        android:defaultValue="12"
        android:dialogTitle="@string/dialog_pregain"
        android:entries="@array/compression_pregain"
        android:entryValues="@array/compression_pregain_values"
        android:title="@string/dialog_pregain" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.threshold"
        android:defaultValue="60"
        android:dialogTitle="@string/dialog_threshold"
        android:entries="@array/compression_threshold"
        android:entryValues="@array/compression_threshold_values"
        android:title="@string/dialog_threshold" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.knee"
        android:defaultValue="30"
        android:dialogTitle="@string/dialog_knee"
        android:entries="@array/compression_knee"
        android:entryValues="@array/compression_knee_values"
        android:title="@string/dialog_knee" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.ratio"
        android:defaultValue="12"
        android:dialogTitle="@string/dialog_ratio"
        android:entries="@array/compression_ratio"
        android:entryValues="@array/compression_ratio_values"
        android:title="@string/dialog_ratio" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.attack"
        android:defaultValue="10"
        android:dialogTitle="@string/dialog_attack"
        android:entries="@array/compression_attack"
        android:entryValues="@array/compression_attack_values"
        android:title="@string/dialog_attack" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.compression.release"
        android:defaultValue="240"
        android:dialogTitle="@string/dialog_release"
        android:entries="@array/compression_release"
        android:entryValues="@array/compression_release_values"
        android:title="@string/dialog_release" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_bassboost_title">
    <CheckBoxPreference
        android:disableDependentsState="false"
        android:key="dsp.bass.enable"
        android:summaryOn="@string/pref_bassboost_summary_on"
        android:summaryOff="@string/pref_bassboost_summary_off"
        android:title="@string/pref_bassboost_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
        android:entries="@array/bassboost_modes"
        android:dialogTitle="@string/dialog_effect"
        android:key="dsp.bass.mode"
        android:defaultValue="600"
        android:title="@string/pref_effect_title"
        android:entryValues="@array/bassboost_modes_values" />
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/dialog_filtertype"
        android:entries="@array/bassboost_filtertype"
        android:entryValues="@array/bassboost_filtertype_values"
        android:title="@string/dialog_filtertype"
        android:key="dsp.bass.filtertype" />
    <james.dsp.preference.SummariedListPreference
        android:entries="@array/bassboost_freqs"
        android:dialogTitle="@string/dialog_effect"
        android:key="dsp.bass.freq"
        android:defaultValue="55"
        android:title="@string/pref_effect_freq_title"
        android:entryValues="@array/bassboost_freqs_values" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_equalizer_title">
    <CheckBoxPreference
        android:disableDependentsState="false"
        android:key="dsp.tone.enable"
        android:summaryOn="@string/pref_equalizer_summary_on"
        android:summaryOff="@string/pref_equalizer_summary_off"
        android:title="@string/pref_equalizer_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
        android:entries="@array/equalizer_preset_modes"
        android:dialogTitle="@string/pref_equalizer_preset_title"
        android:key="dsp.tone.eq"
        android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0"
        android:title="@string/pref_equalizer_preset_title"
        android:entryValues="@array/equalizer_preset_values" />
    <james.dsp.preference.EqualizerPreference android:key="dsp.tone.eq.custom" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_headset_virtual_title">
    <CheckBoxPreference
        android:key="dsp.headphone.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_headset_virtual_summary_on"
        android:summaryOff="@string/pref_headset_virtual_summary_off"
        android:title="@string/pref_headset_virtual_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
         android:key="dsp.headphone.modeverb"
         android:defaultValue="1"
         android:dialogTitle="@string/dialog_mode"
         android:entries="@array/headphone_mode"
         android:entryValues="@array/headphone_modeverb_values"
         android:title="@string/dialog_mode" />
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/dialog_room"
        android:entries="@array/headphone_preset"
        android:entryValues="@array/headphone_preset_values"
        android:title="@string/pref_room_title"
        android:key="dsp.headphone.preset" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.roomsize"
        android:defaultValue="50"
        android:dialogTitle="@string/dialog_roomsize"
        android:entries="@array/headphone_roomsize"
        android:entryValues="@array/headphone_roomsize_values"
        android:title="@string/dialog_roomsize" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.reverbtime"
        android:defaultValue="50"
        android:dialogTitle="@string/dialog_reverbtime"
        android:entries="@array/headphone_reverbtime"
        android:entryValues="@array/headphone_reverbtime_values"
        android:title="@string/dialog_reverbtime" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.damping"
        android:defaultValue="50"
        android:dialogTitle="@string/dialog_damping"
        android:entries="@array/headphone_damping"
        android:entryValues="@array/headphone_damping_values"
        android:title="@string/dialog_damping" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.inbandwidth"
        android:defaultValue="80"
        android:dialogTitle="@string/dialog_inbandwidth"
        android:entries="@array/headphone_inbandwidth"
        android:entryValues="@array/headphone_inbandwidth_values"
        android:title="@string/dialog_inbandwidth" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.earlyverb"
        android:defaultValue="50"
        android:dialogTitle="@string/dialog_earlyverb"
        android:entries="@array/headphone_earlyverb"
        android:entryValues="@array/headphone_earlyverb_values"
        android:title="@string/dialog_earlyverb" />
    <james.dsp.preference.SummariedListPreference
        android:key="dsp.headphone.tailverb"
        android:defaultValue="50"
        android:dialogTitle="@string/dialog_tailverb"
        android:entries="@array/headphone_tailverb"
        android:entryValues="@array/headphone_tailverb_values"
        android:title="@string/dialog_tailverb" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_convolver_title"
      android:key="dsp.convolver">
    <CheckBoxPreference
        android:key="dsp.convolver.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_convolver_summary_on"
        android:summaryOff="@string/pref_convolver_summary_off"
        android:title="@string/pref_convolver_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreferenceWithCustom
        android:title="@string/dialog_impulseresponse"
        android:key="dsp.convolver.files"
        android:defaultValue=""
        android:dialogTitle="@string/dialog_impulseresponse" />
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/dialog_length"
        android:entries="@array/quality_level"
        android:entryValues="@array/quality_values"
        android:title="@string/dialog_quality"
        android:key="dsp.convolver.quality" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_headset_stereowide_title">
    <CheckBoxPreference
        android:key="dsp.stereowide.enable"
        android:disableDependentsState="false"
        android:summaryOn="@string/pref_headset_stereowide_summary_on"
        android:summaryOff="@string/pref_headset_stereowide_summary_off"
        android:title="@string/pref_headset_stereowide_enable"></CheckBoxPreference>
    <james.dsp.preference.SummariedListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/dialog_stereo"
        android:entries="@array/stereowide_modes"
        android:entryValues="@array/stereowide_values"
        android:title="@string/dialog_stereo"
        android:key="dsp.stereowide.mode" />
  </PreferenceCategory>
</PreferenceScreen>